# indigo

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md  todo.todo
app/: demo.cpp  terrain_test.cpp
include/: application.hpp  basic_geom.hpp  bitmap.hpp  bone.hpp  camera.hpp  colors.hpp  debug.hpp  entity.h  log.hpp  material.hpp  md5_bone.hpp  md5_loader.hpp  md5_mesh.hpp  md5_model.hpp  mesh.hpp  mesh_entity.hpp  model.hpp  mtl_loader.hpp  obj_loader.hpp  obj_mesh.hpp  octnode.hpp  program.hpp  renderer.hpp  resource_manager.hpp  scene.hpp  shader.hpp  split.hpp  switch_t.hpp  terrain.hpp  terrain_cell.hpp  texture.hpp  window.hpp
media/: mesh.mtl
media/tilesets/: default.tileset
shader/: cell-fragment-shader.shader  cell.vert  default-fragment-shader.shader  default-vertex-shader.shader  default.frag  md5-vertex-shader.shader  md5.frag  md5.vert
src/: CMakeLists.txt  application.cpp  basic_geom.cpp  bitmap.cpp  bitmap.hpp  bitmap_loader.cpp  bitmap_loader.hpp  camera.cpp  colors.hpp  entity.cpp  filesystem_unix.cpp  material.hpp  md5_bone.cpp  md5_loader.cpp  md5_mesh.cpp  md5_model.cpp  mesh.cpp  mesh_entity.cpp  mtl_loader.cpp  obj_loader.cpp  obj_mesh.cpp  octnode.cpp  program.cpp  renderer.cpp  resource_manager.hpp  scene.cpp  shader.cpp  terrain.cpp  terrain_cell.cpp  texture.cpp  texture.hpp  window.cpp
src/app/: CMakeLists.txt  application.cpp  application.hpp  application_event.cpp  application_event.hpp  basic_event.hpp  event_visitor.hpp  keyboard_event.cpp  keyboard_event.hpp  mouse_event.cpp  mouse_event.hpp  sdl_utility.cpp  sdl_utility.hpp
src/core/: CMakeLists.txt  basic_geom.cpp  basic_geom.hpp
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp
src/model/: CMakeLists.txt  bone.hpp  material.hpp  mesh.hpp  model.hpp  texture.cpp  texture.hpp
src/model/md5/: CMakeLists.txt  md5_bone.cpp  md5_bone.hpp  md5_loader.cpp  md5_loader.hpp  md5_mesh.cpp  md5_mesh.hpp  md5_model.cpp  md5_model.hpp
src/platform/: CMakeLists.txt  bitmap.cpp  bitmap.hpp  bitmap_loader.cpp  bitmap_loader.hpp  filesystem.hpp  filesystem_unix.cpp  gl.hpp  resource_manager.hpp  window.cpp  window.hpp
src/scene/: CMakeLists.txt  basic_light.cpp  basic_light.hpp  camera.cpp  camera.hpp  entity.cpp  entity.hpp  global_light.hpp  group_entity.cpp  group_entity.hpp  mesh_entity.cpp  mesh_entity.hpp  octnode.cpp  octnode.hpp  renderer.cpp  renderer.hpp  scene.cpp  scene.hpp
src/shader/: CMakeLists.txt  basic_program.cpp  basic_program.hpp  default_program.cpp  default_program.hpp  program.cpp  program.hpp  shader.cpp  shader.hpp  shader_loader.cpp  shader_loader.hpp
src/terrain/: CMakeLists.txt  CMakeLists.txt.orig  terrain.cpp  terrain.hpp  terrain_cell.cpp  terrain_cell.hpp  terrain_mesh.cpp  terrain_mesh.hpp
src/util/: CMakeLists.txt  colors.hpp  debug.hpp  log.hpp  rect.hpp  split.hpp  switch_t.hpp
tools/cmake/: FindGLM.cmake  FindSDL2.cmake
